<resources>
    <string name="app_name">SS User</string>
    <string name="don_t_have_">
Don\'t have an account??
</string>
    <string name="forget_pass">
Forget Password
</string>
    <string name="register_he">
Register Here
</string>
    <string name="departmenta">
Store
</string>
    <string name="silks">
Silks
</string>
    <string name="cafe">
Cafe
</string>
    <string name="navigation_drawer_open">
        Open Menu
    </string>
    <string name="navigation_drawer_close">
        Close Menu
    </string>
    <string name="store">STORE</string>
    <string name="username">Username</string>
    <string name="confirmpass">Confirm Pass</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="create_user">Create User</string>
    <string name="todo">TODO</string>
    <string name="title">
Name
</string>
    <string name="value">
Enter Name
</string>
    <string name="please_select_the_option">Please select the option...</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="expenses">Expenses</string>
    <string name="agencies">Agencies</string>
    <string name="add_row">Add Row</string>
    <string name="save">Save</string>
    <string name="request_access">Request Access</string>
    <string name="home">Home</string>
    <string name="manage_user">Manage User</string>
    <string name="expense_history">Expense History</string>
    <string name="export_data">Export Data</string>
    <string name="view_access_request">View Access Request</string>
    <string name="logout">logout</string>
    <string name="add_row_for_expenses">Add Row For Expenses</string>
    <string name="add_row_for_agencies">Add Row For Agencies</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="status">Status</string>
    <string name="reason">Reason</string>
    <string name="requested_date">Requested Date</string>
    <string name="user_id">User ID</string>
    <string name="sent_message">Sent message</string>


</resources>