<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="#FFF"
    android:elevation="2dp"
    android:layout_marginBottom="10dp">

    <TextView android:id="@+id/tvUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/accessrequest"
        android:text="@string/user_id" />

    <TextView android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/accessrequest"
        android:text="@string/requested_date" />

    <TextView android:id="@+id/tvReason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/accessrequest"
        android:text="@string/reason" />

    <TextView android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/accessrequest"
        android:text="@string/status" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/accessrequest"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:text="@string/edit" />

    </LinearLayout>

</LinearLayout>
