<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/popup"
    android:elevation="6dp"
    >

    <TextView
        android:id="@+id/tvPopupMessage"
        android:layout_marginTop="75dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_the_option"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnexpenses"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/expenses"
        android:textSize="18sp"
        android:backgroundTint="#C62828"
        android:textColor="#F5F5F5"
        android:layout_below="@id/tvPopupMessage"
        android:layout_marginTop="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"/>

    <Button
        android:id="@+id/btnagencies"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/agencies"
        android:textSize="18sp"
        android:backgroundTint="#C62828"
        android:textColor="#F5F5F5"
        android:layout_below="@+id/tvPopupMessage"
        android:layout_toEndOf="@id/btnexpenses"
        android:layout_marginTop="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="200dp"
        />
</RelativeLayout>
